# aoc-2021

./: Pipfile  pyproject.toml
aoc_2021/: day1.py  training.py
tests/: test_aoc_2021.py
