[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = "Repository for AoC 2021 programming tries and solutions"
authors = ["martin-martin <breuss.martin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
